--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -14,6 +14,7 @@
 \renewcommand{\arraystretch}{1.7}
 
 \usepackage{booktabs}
+\usepackage{dsfont}
 
 % Think about defining new standalone macros for this work
 % \input{buqeye_macros}
